# make-opensource-great-again

./: .gitignore  INCIDENT-RESPONSE.md  README.md  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
apps/desktop/: .gitignore  package.json
apps/desktop/splash/: index.html  main.js  style.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: daemon_runtime.rs  kill.rs  lib.rs  main.rs
openspec/changes/mosga-v01/: planning-context.md  portfolio-run.json
openspec/changes/mosga-v01-readers/: auto-run.json  design.md  tasks.md
openspec/changes/mosga-v01-review-ui/: design.md  proposal.md  review-report.md
openspec/changes/mosga-v01-sanitizer/: review-report.md
openspec/changes/mosga-v02/: planning-context.md  portfolio-run.json
openspec/changes/mosga-v02-direct-submit/: auto-run.json  proposal.md  review-report.md  ship-log.md
openspec/changes/mosga-v02-sanitizer-coverage/: auto-run.json  design.md
openspec/changes/mosga-v02-tauri-shell/: auto-run.json  review-report.md  ship-log.md  smoke-test.md
openspec/office-hours/: agent-session-data-contribution.md
openspec/specs/community-repo-template/: spec.md
openspec/specs/dataset-export/: spec.md
openspec/specs/direct-submit/: spec.md
rasen/office-hours/: frontend-ui-redesign-wireframe.html  frontend-ui-redesign.md  session-picker-batch-journey.md
templates/community-data-repo/: .gitignore  LICENSE-DATA  README.md  package.json  sanitizer.custom-rules.example.json
(+164 files in other folders)
