[package]
name = "mosga-desktop"
version = "0.1.0"
description = "mosga desktop shell"
authors = ["mosga"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mosga_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Loopback-only HTTP probe of the daemon's /api/health. No TLS is needed
# (plain http://127.0.0.1:8899), so reqwest's default features (which pull
# native-tls) are off; the blocking client gives a simple bounded-timeout probe
# off the main thread, built `.no_proxy()` so a system HTTP proxy can't mask a
# live loopback daemon.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }

[target.'cfg(unix)'.dependencies]
# Process-group kill for spawned children on Unix (kill(-pgid, ...)).
libc = "0.2"

[features]
# By default Tauri runs in production mode (uses the bundled frontendDist).
# The `custom-protocol` feature is enabled by `tauri build`.
custom-protocol = ["tauri/custom-protocol"]
